--- a/Módulo_1/Semana_02/Exercicios(07_a_11)/style.scss
+++ b/Módulo_1/Semana_02/Exercicios(07_a_11)/style.scss
@@ -3,3 +3,9 @@
     border-radius: 0.25rem;
     padding: 0rem 0.5rem 0rem 1rem;
 }
+
+.modal_button {
+    background: #8cc6f0;
+    color: rgb(31, 31, 31);
+    border-color: #99b8ce;
+}
