--- a/Módulo_1/Semana_08_Ng-Food/src/app/app.component.html
+++ b/Módulo_1/Semana_08_Ng-Food/src/app/app.component.html
@@ -1,11 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container">
-    <img src="../assets/img/cardapio.png" alt="Cardápio" style="width: 30px" />
-    <a class="navbar-brand ms-3" href="#">NG-FOOD</a>
-    <ul class="navbar-nav me-auto mb-lg-0">
-      <li class="nav-item">
-        <a class="nav-link" href="#">Cardápio</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <img
+        src="../assets/img/cardapio.png"
+        alt="Cardápio"
+        style="width: 30px"
+      />
+      <a class="navbar-brand ms-3" href="#">NG-FOOD</a>
+      <ul class="navbar-nav me-auto mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Cardápio</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+</header>
