--- a/Módulo_1/Semana_08_Ng-Food/src/app/app.component.html
+++ b/Módulo_1/Semana_08_Ng-Food/src/app/app.component.html
@@ -15,3 +15,9 @@
     </div>
   </nav>
 </header>
+
+<footer class="py-3 my-4">
+  <p class="text-center text-muted border-top pt-3">
+    © 2022 NG-FOOD, By Conrado Fortunato
+  </p>
+</footer>
