feat: Exercice 05 complete

--- a/Módulo_1/Semana_08_Ng-Food/src/app/app.component.html
+++ b/Módulo_1/Semana_08_Ng-Food/src/app/app.component.html
@@ -1,23 +1,28 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container">
-      <img
-        src="../assets/img/cardapio.png"
-        alt="Cardápio"
-        style="width: 30px"
-      />
-      <a class="navbar-brand ms-3" href="#">NG-FOOD</a>
-      <ul class="navbar-nav me-auto mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Cardápio</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-</header>
+<NGF-header></NGF-header>
 
-<footer class="py-3 my-4">
-  <p class="text-center text-muted border-top pt-3">
-    © 2022 NG-FOOD, By Conrado Fortunato
-  </p>
-</footer>
+<div class="container d-flex justify-content-evenly">
+  <div class="card m-3">
+    <img
+      src="../assets/img/comida.jpg"
+      class="card-img-top p-3"
+      style="width: 25rem; height: 15rem"
+      alt="Comida"
+    />
+    <div class="card-body" style="padding-top: 8px">
+      <h5 class="card-title text-center">Comida</h5>
+    </div>
+  </div>
+  <div class="card m-3">
+    <img
+      src="../assets/img/bebida.jpg"
+      class="card-img-top p-3"
+      style="width: 25rem; height: 15rem"
+      alt="Bebida"
+    />
+    <div class="card-body" style="padding-top: 8px">
+      <h5 class="card-title text-center">Bebida</h5>
+    </div>
+  </div>
+</div>
+
+<NGF-footer></NGF-footer>
